新增时间统计总额
